# neuro

./: .gitignore  Cargo.toml  README.md  neuro.service  neuro.toml  prd.md
src/: cli.rs  cli_main.rs  config.rs  delivery.rs  engine.rs  lib.rs  main.rs  mcp.rs  persistence.rs  types.rs
tests/: engine_test.rs
