[package]
name = "neuro"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "neuro"
path = "src/main.rs"

[lib]
name = "neuro"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
